update learn-kafka module